# Musicgen-exp

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml
data/annotations/: README.md  example.json
docs/: annotations.md  audio-features.md  benchmark.md  data-policy.md  evaluation.md  interventions.md  musicgen-integration.md  pipeline.md  probes.md  research-plan.md  runpod-full-study.md  runpod.md
results/runpod-2026-05-06/: README.md  summary.json
results/runpod-2026-05-06/data/: benchmark_manifest.jsonl  recurrence_failures.jsonl  recurrence_proposals.jsonl
results/runpod-2026-05-06/indexes/: activation_index.jsonl
schemas/: annotation.schema.json
scripts/: build_benchmark_manifest.py  create_annotation_splits.py  create_run_manifest.py  create_runpod_pod.example.sh  extract_motif_features.py  extract_musicgen_activations.py  generate_evaluation_report.py  package_for_runpod.sh  prepare_annotation_review.py  run_sae_interventions.py  runpod_preflight.sh  setup_remote.sh  train_future_event_probes.py  validate_annotations.py  validate_config.py
src/musicgen_exp/: __init__.py  annotation_workflow.py  annotations.py  audio_features.py  config.py  evaluation.py  interventions.py  model_integration.py  mtg_jamendo.py  probes.py  run_manifest.py
src/musicgen_exp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_annotation_workflow.py  test_annotations.py  test_audio_features.py  test_config.py  test_evaluation.py  test_interventions.py  test_model_integration.py  test_mtg_jamendo.py  test_probes.py
(+6 files in other folders)
