[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicgen-exp"
version = "0.1.0"
description = "MusicGen long-horizon coherence feature experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
audio = [
  "librosa>=0.10",
  "soundfile>=0.12"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
